@@ -1,3 +1,14 @@
+2011-03-31  gettextize  <bug-gnu-gettext@gnu.org>
+
+	* Makefile.in.in: Upgrade to gettext-0.15.
+	* Rules-quot: New file, from gettext-0.15.
+	* boldquot.sed: New file, from gettext-0.15.
+	* en@boldquot.header: New file, from gettext-0.15.
+	* en@quot.header: New file, from gettext-0.15.
+	* insert-header.sin: New file, from gettext-0.15.
+	* quot.sed: New file, from gettext-0.15.
+	* remove-potcdate.sin: New file, from gettext-0.15.
+
 2011-03-10  gettextize  <bug-gnu-gettext@gnu.org>
 
 	* Rules-quot: New file, from gettext-0.18.1.
